# auth-microservice

./: .gitignore  README.md  pyproject.toml
src/: config.py  exceptions.py
src/api/: __main__.py  app.py  dependencies.py
src/api/auth/: dependencies.py  routes.py  utils.py
src/repositories/: crud.py
src/repositories/users/: abc.py  repository.py
src/schemas/: users.py
src/storage/sql/: __init__.py
src/storage/sql/models/: __init__.py  users.py
